screens to README

--- a/TODO.txt
+++ b/TODO.txt
@@ -3,8 +3,7 @@
 ## Poza portfolio
 
 - strony hostowane na netlify 
-- wszystkie projekty zbudowane np. przy pomocy parcela
-- utworzyć listę umiejętności
+- wszystkie projekty zbudowane np. przy pomocy parcela/webpacka
 - poprawić linkedin
 - napisać CV
 - na stonie banku dodać pokazywanie istniejących kont i pass do nich.
